--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -3,14 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <bottom>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <buttons>
-          <Button mnemonicParsing="false" text="Button" />
-        </buttons>
-      </ButtonBar>
-   </bottom>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -32,4 +25,16 @@
         </menus>
       </MenuBar>
    </top>
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="14.0" prefHeight="234.0" prefWidth="1319.0" style="-fx-background-color: white;" text="Job descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob descriptionJob description" textAlignment="CENTER" wrapText="true" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="280.0" prefHeight="71.0" prefWidth="926.0" style="-fx-background-color: white;" text="Suggested Code" textAlignment="CENTER" wrapText="true" />
+            <Label alignment="CENTER" layoutX="1285.0" layoutY="280.0" prefHeight="72.0" prefWidth="335.0" style="-fx-background-color: FFFFFF;" text="Confidence" />
+            <TextArea layoutX="688.0" layoutY="527.0" prefHeight="65.0" prefWidth="604.0" promptText="Input code" />
+            <Button layoutX="644.0" layoutY="723.0" mnemonicParsing="false" text="Previous case" />
+            <Button layoutX="1231.0" layoutY="723.0" mnemonicParsing="false" text="Save &amp; Next case" />
+         </children>
+      </Pane>
+   </center>
 </BorderPane>
